5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4193/executions/1595_2895.log
== TEST (2019-03-26 16:31:04) 
-- CODE:
var=float(input("digite a quantidade, valor unitario, frete ")
			 






			 



-- ERROR:
File "XXXX", line 12
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:31:18) 
-- CODE:
var=float(input("digite a quantidade + valor unitario+ frete ")
			 






			 



-- ERROR:
File "XXXX", line 12
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:32:29) 
-- CODE:
var=float(input("digite a quantidade + valor unitario+ frete ")
total=8*4+45 






			 



-- ERROR:
File "XXXX", line 2
    total=8*4+45 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:32:53) 
-- CODE:
var=float(input("digite a quantidade + valor unitario+ frete ")
total=8*var+45 






			 



-- ERROR:
File "XXXX", line 2
    total=8*var+45 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:35:04) 
-- CODE:
var=input("qual a quantidade?")






			 



-- ERROR:
File "XXXX", line 2
    total=8*var+45 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:35:50) 
-- CODE:
var=input("qual a quantidade?")
var=input("qual o valor unitario?")





			 



-- ERROR:
File "XXXX", line 2
    total=8*var+45 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:36:21) 
-- CODE:
var=input("qual a quantidade?")
var=input("qual o valor unitario?")
var=input("qual o frete?")





			 



-- ERROR:
File "XXXX", line 2
    total=8*var+45 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:36:29) 
-- CODE:
var=input("qual a quantidade?")
var=input("qual o valor unitario?")
var=input("qual o frete?")





			 



-- ERROR:
File "XXXX", line 2
    total=8*var+45 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:36:34) 
-- CODE:
var=input("qual a quantidade?")
var=input("qual o valor unitario?")
var=input("qual o frete?")





			 



-- ERROR:
File "XXXX", line 2
    total=8*var+45 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:36:36) 
-- CODE:
var=input("qual a quantidade?")
var=input("qual o valor unitario?")
var=input("qual o frete?")





			 



-- ERROR:
File "XXXX", line 2
    total=8*var+45 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:36:39) 
-- CODE:
var=input("qual a quantidade?")
var=input("qual o valor unitario?")
var=input("qual o frete?")





			 



-- ERROR:
File "XXXX", line 2
    total=8*var+45 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:37:36) 
-- CODE:
var=input("qual a quantidade?")
var=input("qual o valor unitario?")
var=input("qual o frete?")
total=(var)




			 



-- ERROR:
File "XXXX", line 2
    total=8*var+45 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:38:38) 
-- CODE:
var=input("qual a quantidade?")
var=input("qual o valor unitario?")
var=input("qual o frete?")
total=(8*var+2)




			 



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=(8*var+2)
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:39:55) 
-- CODE:
var=float(input("qual a quantidade?")
var=float(input("qual o valor unitario?")
var=float(input("qual o frete?")




			 



-- ERROR:
File "XXXX", line 2
    var=float(input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:40:10) 
-- CODE:
var=float(input("qual a quantidade?")
var=float(input("qual o valor unitario?")
var=float(input("qual o frete?")




			 



-- ERROR:
File "XXXX", line 2
    var=float(input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:40:11) 
-- CODE:
var=float(input("qual a quantidade?")
var=float(input("qual o valor unitario?")
var=float(input("qual o frete?")




			 



-- ERROR:
File "XXXX", line 2
    var=float(input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:40:12) 
-- CODE:
var=float(input("qual a quantidade?")
var=float(input("qual o valor unitario?")
var=float(input("qual o frete?")




			 



-- ERROR:
File "XXXX", line 2
    var=float(input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:40:13) 
-- CODE:
var=float(input("qual a quantidade?")
var=float(input("qual o valor unitario?")
var=float(input("qual o frete?")




			 



-- ERROR:
File "XXXX", line 2
    var=float(input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:40:15) 
-- CODE:
var=float(input("qual a quantidade?")
var=float(input("qual o valor unitario?")
var=float(input("qual o frete?")




			 



-- ERROR:
File "XXXX", line 2
    var=float(input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:40:26) 
-- CODE:
var=(input("qual a quantidade?")
var=(input("qual o valor unitario?")
var=(input("qual o frete?")




			 



-- ERROR:
File "XXXX", line 2
    var=(input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:40:29) 
-- CODE:
var=(input("qual a quantidade?")
var=(input("qual o valor unitario?")
var=(input("qual o frete?")




			 



-- ERROR:
File "XXXX", line 2
    var=(input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:40:37) 
-- CODE:
var=input("qual a quantidade?")
var=input("qual o valor unitario?")
var=input("qual o frete?")




			 



-- ERROR:
File "XXXX", line 2
    var=(input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:40:44) 
-- CODE:
var=input("qual a quantidade?")
var=input("qual o valor unitario?")
var=input("qual o frete?")




			 



-- ERROR:
File "XXXX", line 2
    var=(input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:40:52) 
-- CODE:
var=input("qual a quantidade?")
var=input("qual o valor unitario?")
var=input("qual o frete?")




			 



-- ERROR:
File "XXXX", line 2
    var=(input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:41:05) 
-- CODE:
var=input("qual a quantidade?")
var=input("qual o valor unitario?")
var=input("qual o frete?")




			 



-- ERROR:
File "XXXX", line 2
    var=(input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:42:02) 
-- CODE:
var=input("qual o valor da quantidade")
print(var)





			 



-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:42:14) 
-- CODE:
var=input("qual o valor da quantidade?)
print(var)





			 



-- ERROR:
File "XXXX", line 1
    var=input("qual o valor da quantidade?)
                                          ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:42:25) 
-- CODE:
var=input("qual o valor da quantidade?")
print(var)





			 



-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:43:29) 
-- CODE:
var=input("qual o valor da quantidade?")
print(var)
var=input("qual o valor unitario?")
print(var)




			 



-- OUTPUT:
12
45.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:44:47) 
-- CODE:
var=input("qual o valor da quantidade?")
print(var)
var=input("qual o valor unitario?")
print(var)
var=input("qual o valor do frete?")
print(var)



			 



-- OUTPUT:
12
45.0
78.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:46:42) 
-- CODE:
var=input("qual o valor da quantidade?")
print(var)
var=input("qual o valor unitario?")
print(var)
var=input("qual o valor do frete?")
print(var)
total= 8*4+2
print(total)

			 



-- OUTPUT:
12
45.0
78.0
34
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:49:50) 
-- CODE:
var=float(input("qual o valor da quantidade?")
print(var)
var=float(input("qual o valor unitario?")
print(var)
var= float(input("qual o valor do frete?")
print(var)
total= 8*4+2
print(total)

			 



-- ERROR:
File "XXXX", line 2
    print(var)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:50:00) 
-- CODE:
var=float(input("qual o valor da quantidade?")
print(var)
var=float(input("qual o valor unitario?")
print(var)
var= float(input("qual o valor do frete?")
print(var)
print(total)

			 



-- ERROR:
File "XXXX", line 2
    print(var)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:50:07) 
-- CODE:
var=float(input("qual o valor da quantidade?")
print(var)
var=float(input("qual o valor unitario?")
print(var)
var= float(input("qual o valor do frete?")
print(var)


			 



-- ERROR:
File "XXXX", line 2
    print(var)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:50:22) 
-- CODE:
var=float(input("qual o valor da quantidade?")
var=float(input("qual o valor unitario?")
var= float(input("qual o valor do frete?")



			 



-- ERROR:
File "XXXX", line 2
    var=float(input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:51:48) 
-- CODE:
var=input("qual o valor da quantidade?")
var=(input("qual o valor unitario?")
var= (input("qual o valor do frete?")



			 



-- ERROR:
File "XXXX", line 3
    var= (input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:51:51) 
-- CODE:
var=input("qual o valor da quantidade?")
var=(input("qual o valor unitario?")
var= (input("qual o valor do frete?")



			 



-- ERROR:
File "XXXX", line 3
    var= (input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:52:40) 
-- CODE:
var=input("qual o valor da quantidade?")



			 



-- ERROR:
File "XXXX", line 3
    var= (input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:53:48) 
-- CODE:
var=input("qual o valor da quantidade?")
float(var)


			 



-- ERROR:
File "XXXX", line 3
    var= (input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:53:55) 
-- CODE:
var=input("qual o valor da quantidade?")
float(var)


			 



-- ERROR:
File "XXXX", line 3
    var= (input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:54:02) 
-- CODE:
var=input("qual o valor da quantidade?")
float(var)


			 



-- EXECUTION TIME:
0.12672
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:

-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:54:09) 
-- CODE:
var=input("qual o valor da quantidade?")
float(var)


			 



-- ERROR:
File "XXXX", line 3
    var= (input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:01:14) 
-- CODE:
var1=int(input("qual o valor da quantidade?")
var2=float(input("qual o valor unitario?")
var3=float(input("qual o valor do frete?")
total=var1*var2+var3)
print(total)



-- ERROR:
File "XXXX", line 2
    var2=float(input()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:01:21) 
-- CODE:
var1=int(input("qual o valor da quantidade?")
var2=float(input("qual o valor unitario?")
var3=float(input("qual o valor do frete?")
total=(var1*var2+var3)
print(total)



-- ERROR:
File "XXXX", line 2
    var2=float(input()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:02:09) 
-- CODE:
var1=int(input("qual o valor da quantidade?"))
var2=float(input("qual o valor unitario?"))
var3=float(input("qual o valor do frete?"))
total=(var1*var2+var3)
print(total)


-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:02:29) 
-- CODE:
var1=int(input("qual o valor da quantidade?"))
var2=float(input("qual o valor unitario?"))
var3=float(input("qual o valor do frete?"))
total=(var1*var2+var3)
print(total)


-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:03:00) 
-- CODE:
var1=int(input("qual o valor da quantidade?"))
var2=float(input("qual o valor unitario?"))
var3=float(input("qual o valor do frete?"))
total=(var1*var2+var3)
print(total)


-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:03:16) 
-- CODE:
var1=int(input("qual o valor da quantidade?"))
var2=float(input("qual o valor unitario?"))
var3=float(input("qual o valor do frete?"))
total=(var1*var2+var3)
print(total)


-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:03:43) 
-- CODE:
var1=int(input("qual o valor da quantidade?"))
var2=float(input("qual o valor unitario?"))
var3=float(input("qual o valor do frete?"))
total=(var1*var2+var3)
print(total)


-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:04:13) 
-- CODE:
var1=int(input("qual o valor da quantidade?"))
var2=float(input("qual o valor unitario?"))
var3=float(input("qual o valor do frete?"))
total=(var1*var2+var3)
print(total)


-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:04:24) 
-- CODE:
var1=int(input("qual o valor da quantidade?"))
var2=float(input("qual o valor unitario?"))
var3=float(input("qual o valor do frete?"))
total=(var1*var2+var3)
print(total)


-- EXECUTION TIME:
0.135679
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
